k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: darkpawns
  labels:
    name: darkpawns
    app: darkpawns
